UX2 - Added static org entry, added static filters, fixed issue with image borders getting cut off

--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -2613,7 +2613,7 @@ a.button.moderate:hover, input.submit.moderate:hover {background-color: #d83535;
 }
 .buddyimg .img-container {
   float: left;
-  height: 74px;
+  height: 82px;
   width: 74px;
 }
 .buddyimg .img-container img {
